# PEInfo

./: .gitignore  AsyncHashCalculator.cpp  AsyncHashCalculator.h  CMakeLists.txt  CMakeLists_test.txt  COMPILATION_GUIDE.md  CONTRIBUTING.md  CliMain.cpp  CliOptions.cpp  CliOptions.h  DELIVERY_DOCUMENT.md  ENGINEERING_SUMMARY.md  FEATURES_SUMMARY.md  GuiMain.cpp  HashCalculator.cpp  HashCalculator.h  PEAnalyzer.cpp  PEAnalyzer.h  PEAnalyzer.ico.h  PEAnalyzer.rc  PEAnalyzer.sln  PEAnalyzer.vcxproj  PEAnalyzer_simple.cpp  PECore.cpp  PECore.h  PEDebugInfo.cpp  PEInfo.sln  PEInfoGui.vcxproj  PEInfoGui.vcxproj.filters  PEParser.cpp  PEParser.h  PEResource.cpp  PRODUCT_REQUIREMENTS.md  PROJECT_FILES.md  PdbFileInfo.h  README.md  ReportJsonWriter.cpp  ReportTextWriter.cpp  ReportTextWriter.h  ReportTypes.h  (+20 more)
.github/workflows/: ci.yml
PEAnalyzer/x64/Release/: PEAnalyzer.exe.recipe  PEAnalyzer.res
PEAnalyzer/x64/Release/PEAnalyzer.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  PEAnalyzer.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
docs/: ENGINEERING_SUMMARY.md  PRD_BinText.md  TODO.md  UI_WIREFRAMES.md
res/: PEInfoGui.manifest
scripts/: build.bat  build.ps1  strings_verify.py
src/: GuiMain.cpp  HashCalculator.h  PECore.cpp  PEDebugInfo.h  PEParser.cpp  PEParser.h  PEResource.h  PESignature.cpp  PESignature.h  PdbFileInfo.cpp  ReportJsonWriter.cpp  ReportJsonWriter.h  ReportTextWriter.cpp  ReportTypes.h  ReportUtil.cpp  ReportUtil.h  ShellContextMenu.cpp  ShellContextMenu.h  StringsScanner.cpp  StringsScanner.h  StringsSearchHistory.cpp  StringsSearchHistory.h
test_build/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  PEAnalyzerTest.sln  PEAnalyzerTest.vcxproj  PEAnalyzerTest.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
tests/: HashBench.cpp
